--- a/css/main.css
+++ b/css/main.css
@@ -1,78 +1,101 @@
-/* line 11, ../scss/main.scss */
+@charset "UTF-8";
+@media (min-width: 768px) {
+  /* line 6, ../scss/main.scss */
+  .navbar-nav.navbar-center {
+    position: absolute;
+    left: 50%;
+    transform: translatex(-70%);
+  }
+}
+@font-face {
+  font-family: 'BebasNeue';
+  src: url("fonts/BEBAS.eot");
+  src: local("Ôÿ║"), url("fonts/BEBAS.woff") format("woff"), url("fonts/BEBAS.ttf") format("truetype"), url("fonts/BEBAS.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/* line 31, ../scss/main.scss */
 #main {
   margin: 0 auto;
   width: 90%;
 }
 @media (min-width: 990px) {
-  /* line 11, ../scss/main.scss */
+  /* line 31, ../scss/main.scss */
   #main {
     width: 990px;
   }
 }
 
-/* line 21, ../scss/main.scss */
-header {
-  margin-bottom: 20px;
+/* line 41, ../scss/main.scss */
+#white {
+  color: #fff;
+  font-family: 'BebasNeue', sans-serif;
 }
-/* line 22, ../scss/main.scss */
+
+/* line 46, ../scss/main.scss */
+#turquoise {
+  color: #46b29d;
+  font-family: 'BebasNeue', sans-serif;
+}
+
+/* line 51, ../scss/main.scss */
+.navbar {
+  margin: 0 auto;
+  background-color: #e0dcda;
+  font-family: 'BebasNeue', sans-serif;
+  color: #000;
+}
+
+/* line 66, ../scss/main.scss */
+header {
+  background-color: #000;
+  font-family: 'BebasNeue', sans-serif;
+}
+/* line 69, ../scss/main.scss */
 header .inner {
   margin: 0 auto;
-  width: 90%;
-}
-/* line 26, ../scss/main.scss */
-header .inner .logo {
-  margin-top: 10px;
-  margin-bottom: 30px;
-}
-/* line 30, ../scss/main.scss */
-header .inner .logo .name {
-  font-size: 25px;
-  font-weight: 400;
-}
-/* line 35, ../scss/main.scss */
-header .inner .logo .version {
-  color: #aaa;
-  font-size: 10px;
-}
-/* line 36, ../scss/main.scss */
-header .inner .logo .version::before {
-  content: "Version";
-  display: inline-block;
-  margin-right: 5px;
+  width: 100%;
+  display: block;
 }
 @media (min-width: 990px) {
-  /* line 22, ../scss/main.scss */
+  /* line 69, ../scss/main.scss */
   header .inner {
     width: 990px;
   }
 }
-/* line 54, ../scss/main.scss */
-header::after {
-  content: '';
-  display: block;
-  height: 10px;
-  width: 100%;
-  background-color: #337ab7;
-  margin-top: 5px;
+/* line 79, ../scss/main.scss */
+header .btn {
+  background-color: #000;
+  border: none;
+  font-size: 11.5pt;
+  float: right;
+}
+/* line 84, ../scss/main.scss */
+header .btn:hover {
+  background-color: #000;
 }
 
-/* line 67, ../scss/main.scss */
+/* line 90, ../scss/main.scss */
+main {
+  background-color: #f2f2f2;
+}
+
+/* line 95, ../scss/main.scss */
 .toast-success {
   background-color: #dff0d8;
 }
 
-/* line 68, ../scss/main.scss */
+/* line 96, ../scss/main.scss */
 .toast-error {
   background-color: #f2dede;
 }
 
-/* TODO use SCSS... */
-/* line 73, ../scss/main.scss */
+/* line 100, ../scss/main.scss */
 .full {
   width: 100%;
 }
 
-/* line 76, ../scss/main.scss */
+/* line 103, ../scss/main.scss */
 .gap {
   height: 30px;
   width: 100%;
@@ -80,60 +103,51 @@ header::after {
   display: block;
 }
 
-/* line 82, ../scss/main.scss */
-.footer {
-  background: #EDEFF1;
-  height: auto;
-  padding-bottom: 30px;
-  position: relative;
+/* line 111, ../scss/main.scss */
+footer {
+  background: #000;
+  font-family: 'BebasNeue', sans-serif;
+  padding: 50px;
+  min-height: auto;
   width: 100%;
-  border-bottom: 1px solid #CCCCCC;
-  border-top: 1px solid #DDDDDD;
+  margin: 0 auto;
+  position: absolute;
 }
-
-/* line 91, ../scss/main.scss */
-.footer p {
-  margin: 0;
-}
-
-/* line 94, ../scss/main.scss */
-.footer img {
-  max-width: 100%;
-}
-
-/* line 97, ../scss/main.scss */
-.footer h3 {
-  border-bottom: 1px solid #BAC1C8;
-  color: #54697E;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 27px;
-  padding: 40px 0 10px;
-  text-transform: uppercase;
-}
-
-/* line 106, ../scss/main.scss */
-.footer ul {
-  font-size: 13px;
-  list-style-type: none;
-  margin-left: 0;
-  padding-left: 0;
-  margin-top: 15px;
-  color: #7F8C8D;
-}
-
-/* line 114, ../scss/main.scss */
-.footer ul li a {
-  padding: 0 0 5px 0;
-  display: block;
-}
-
-/* line 118, ../scss/main.scss */
-.footer a {
-  color: #78828D;
-}
-
 /* line 121, ../scss/main.scss */
+footer ul {
+  list-style-type: none;
+  padding: auto;
+}
+/* line 125, ../scss/main.scss */
+footer ul #social {
+  display: flex;
+  align-items: center;
+}
+/* line 131, ../scss/main.scss */
+footer li {
+  float: left;
+  padding-left: 100px;
+  color: #fff;
+  font-family: 'BebasNeue', sans-serif;
+  height: auto;
+  display: inline-block;
+}
+/* line 138, ../scss/main.scss */
+footer li a {
+  color: #fff;
+  font-family: 'BebasNeue', sans-serif;
+  font-size: 10.5pt;
+  display: block;
+  text-align: center;
+  overflow: hidden;
+}
+/* line 145, ../scss/main.scss */
+footer li a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+/* line 155, ../scss/main.scss */
 .supportLi h4 {
   font-size: 20px;
   font-weight: lighter;
@@ -142,7 +156,7 @@ header::after {
   padding-bottom: 0;
 }
 
-/* line 128, ../scss/main.scss */
+/* line 162, ../scss/main.scss */
 .newsletter-box input#appendedInputButton {
   background: #FFFFFF;
   display: inline-block;
@@ -152,7 +166,7 @@ header::after {
   width: 100%;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 170, ../scss/main.scss */
 .newsletter-box .btn {
   border: medium none;
   -webkit-border-radius: 3px;
@@ -167,18 +181,18 @@ header::after {
   color: #fff;
 }
 
-/* line 149, ../scss/main.scss */
+/* line 183, ../scss/main.scss */
 .newsletter-box {
   overflow: hidden;
 }
 
-/* line 152, ../scss/main.scss */
+/* line 186, ../scss/main.scss */
 .bg-gray {
   background-image: -moz-linear-gradient(center bottom, #BBBBBB 0%, #F0F0F0 100%);
   box-shadow: 0 1px 0 #B4B3B3;
 }
 
-/* line 156, ../scss/main.scss */
+/* line 190, ../scss/main.scss */
 .social li {
   background: none repeat scroll 0 0 #B5B5B5;
   border: 2px solid #B5B5B5;
@@ -201,7 +215,7 @@ header::after {
   -o-transition: all 0.5s ease 0s;
 }
 
-/* line 177, ../scss/main.scss */
+/* line 211, ../scss/main.scss */
 .social li:hover {
   transform: scale(1.15) rotate(360deg);
   -webkit-transform: scale(1.1) rotate(360deg);
@@ -210,25 +224,25 @@ header::after {
   -o-transform: scale(1.1) rotate(360deg);
 }
 
-/* line 184, ../scss/main.scss */
+/* line 218, ../scss/main.scss */
 .social li a {
   color: #EDEFF1;
 }
 
-/* line 187, ../scss/main.scss */
+/* line 221, ../scss/main.scss */
 .social li:hover {
   border: 2px solid #2c3e50;
   background: #2c3e50;
 }
 
-/* line 191, ../scss/main.scss */
+/* line 225, ../scss/main.scss */
 .social li a i {
   font-size: 16px;
   margin: 0 0 0 5px;
   color: #EDEFF1 !important;
 }
 
-/* line 196, ../scss/main.scss */
+/* line 230, ../scss/main.scss */
 .footer-bottom {
   background: #E3E3E3;
   border-top: 1px solid #DDDDDD;
@@ -236,17 +250,17 @@ header::after {
   padding-bottom: 10px;
 }
 
-/* line 202, ../scss/main.scss */
+/* line 236, ../scss/main.scss */
 .footer-bottom p.pull-left {
   padding-top: 6px;
 }
 
-/* line 205, ../scss/main.scss */
+/* line 239, ../scss/main.scss */
 .payments {
   font-size: 1.5em;
 }
 
-/* line 209, ../scss/main.scss */
+/* line 243, ../scss/main.scss */
 .wrapper.login {
   width: 350px;
 }
