--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,14 +2,33 @@
     @media (min-width: $breakpoint) { @content; }
 }
 
-$desktop            : 990px;
-$blue               : #337ab7;
+@media (min-width: 768px) {
+    .navbar-nav.navbar-center {
+        position: absolute;
+        left: 50%;
+        transform: translatex(-70%);
+    }
+}
 
-$lineColor          : $blue;
+@font-face {
+    font-family: 'BebasNeue';
+    src: url('fonts/BEBAS.eot');
+    src: local('☺'), url('fonts/BEBAS.woff') format('woff'), url('fonts/BEBAS.ttf') format('truetype'), url('fonts/BEBAS.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+$desktop            : 990px;
+$black              : #000;
+$turquoise          : #46b29d;
+$white              : #fff;
+$orange             : #e37b40;
+$nav-color          : #e0dcda;
+$main-color         : #f2f2f2;
 
 
 #main {
-
     margin:0 auto;
     width: 90%;
 
@@ -18,49 +37,58 @@ $lineColor          : $blue;
     }
 }
 
+
+#white {
+    color: $white;
+    font-family: 'BebasNeue', sans-serif;
+}
+
+#turquoise {
+    color: $turquoise;
+    font-family: 'BebasNeue', sans-serif;
+}
+
+.navbar {
+    margin: 0 auto;
+    background-color: $nav-color;
+    font-family: 'BebasNeue', sans-serif;
+    color: $black;
+
+    .navbar-nav {
+
+    }
+
+    .navbar-default {
+
+    }
+}
+
 header {
+    background-color: $black;
+    font-family: 'BebasNeue', sans-serif;
     .inner {
         margin:0 auto;
-        width: 90%;
-
-        .logo {
-            margin-top:10px;
-            margin-bottom:30px;
-
-            .name {
-                font-size:25px;
-                font-weight: 400;
-            }
-
-            .version {
-                &::before {
-                    content: "Version";
-                    display: inline-block;
-                    margin-right:5px;
-                }
-
-                color:#aaa;
-                font-size:10px;
-            }
-        }
+        width: 100%;
+        display: block;
 
         @include breakpoint($desktop) {
             width: $desktop;
         }
     }
 
-
-
-    &::after {
-        content: '';
-        display: block;
-        height: 10px;
-        width: 100%;
-        background-color:$lineColor;
-        margin-top:5px;
+    .btn {
+        background-color: $black;
+        border: none;
+        font-size: 11.5pt;
+        float: right;
+        &:hover {
+            background-color: $black;
+        }
     }
+}
 
-    margin-bottom:20px;
+main {
+    background-color: $main-color;
 }
 
 
@@ -68,7 +96,6 @@ header {
 .toast-error{background-color:#f2dede}
 
 
-/* TODO use SCSS... */
 
 .full {
     width: 100%;
@@ -79,45 +106,52 @@ header {
     clear: both;
     display: block;
 }
-.footer {
-    background: #EDEFF1;
-    height: auto;
-    padding-bottom: 30px;
-    position: relative;
+
+
+footer {
+    background: $black;
+    font-family: 'BebasNeue', sans-serif;
+    padding: 50px;
+    min-height: auto;
     width: 100%;
-    border-bottom: 1px solid #CCCCCC;
-    border-top: 1px solid #DDDDDD;
+    margin: 0 auto;
+    position: absolute;
+
+
+    ul {
+        list-style-type: none;
+        padding: auto;
+
+        #social {
+            display: flex;
+            align-items: center;
+        }
+    }
+
+    li {
+        float: left;
+        padding-left: 100px;
+        color: $white;
+        font-family: 'BebasNeue', sans-serif;
+        height: auto;
+        display: inline-block;
+        a {
+            color: $white;
+            font-family: 'BebasNeue', sans-serif;
+            font-size: 10.5pt;
+            display: block;
+            text-align: center;
+            overflow: hidden;
+            &:hover {
+                text-decoration: none;
+                color: $white;
+            }
+        }
+    }
 }
-.footer p {
-    margin: 0;
-}
-.footer img {
-    max-width: 100%;
-}
-.footer h3 {
-    border-bottom: 1px solid #BAC1C8;
-    color: #54697E;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 27px;
-    padding: 40px 0 10px;
-    text-transform: uppercase;
-}
-.footer ul {
-    font-size: 13px;
-    list-style-type: none;
-    margin-left: 0;
-    padding-left: 0;
-    margin-top: 15px;
-    color: #7F8C8D;
-}
-.footer ul li a {
-    padding: 0 0 5px 0;
-    display: block;
-}
-.footer a {
-    color: #78828D
-}
+
+
+
 .supportLi h4 {
     font-size: 20px;
     font-weight: lighter;
