--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,4 @@
 @charset "UTF-8";
-@media (min-width: 768px) {
-  /* line 6, ../scss/main.scss */
-  .navbar-nav.navbar-center {
-    position: absolute;
-    left: 50%;
-    transform: translatex(-70%);
-  }
-}
 @font-face {
   font-family: 'BebasNeue';
   src: url("fonts/BEBAS.eot");
@@ -14,88 +6,99 @@
   font-weight: normal;
   font-style: normal;
 }
-/* line 31, ../scss/main.scss */
+/* line 24, ../scss/main.scss */
 #main {
   margin: 0 auto;
-  width: 90%;
-}
-@media (min-width: 990px) {
-  /* line 31, ../scss/main.scss */
-  #main {
-    width: 990px;
-  }
 }
 
-/* line 41, ../scss/main.scss */
+/* line 30, ../scss/main.scss */
 #white {
   color: #fff;
   font-family: 'BebasNeue', sans-serif;
 }
 
-/* line 46, ../scss/main.scss */
+/* line 35, ../scss/main.scss */
 #turquoise {
   color: #46b29d;
   font-family: 'BebasNeue', sans-serif;
 }
 
-/* line 51, ../scss/main.scss */
+/* line 40, ../scss/main.scss */
 .navbar {
   margin: 0 auto;
   background-color: #e0dcda;
   font-family: 'BebasNeue', sans-serif;
   color: #000;
 }
+/* line 46, ../scss/main.scss */
+.navbar .navbar-nav {
+  width: 100%;
+  text-align: center;
+}
+/* line 49, ../scss/main.scss */
+.navbar .navbar-nav > li {
+  float: none;
+  display: inline-block;
+}
+/* line 53, ../scss/main.scss */
+.navbar .navbar-nav .navbar-right {
+  float: right;
+}
+/* line 58, ../scss/main.scss */
+.navbar .navbar-default {
+  width: 100%;
+  text-align: center;
+}
+/* line 61, ../scss/main.scss */
+.navbar .navbar-default > li {
+  float: none;
+  display: inline-block;
+}
 
-/* line 66, ../scss/main.scss */
+/* line 68, ../scss/main.scss */
 header {
   background-color: #000;
   font-family: 'BebasNeue', sans-serif;
 }
-/* line 69, ../scss/main.scss */
+/* line 71, ../scss/main.scss */
 header .inner {
   margin: 0 auto;
   width: 100%;
   display: block;
 }
-@media (min-width: 990px) {
-  /* line 69, ../scss/main.scss */
-  header .inner {
-    width: 990px;
-  }
-}
-/* line 79, ../scss/main.scss */
+/* line 78, ../scss/main.scss */
 header .btn {
   background-color: #000;
   border: none;
   font-size: 11.5pt;
   float: right;
 }
-/* line 84, ../scss/main.scss */
+/* line 83, ../scss/main.scss */
 header .btn:hover {
   background-color: #000;
 }
 
-/* line 90, ../scss/main.scss */
+/* line 89, ../scss/main.scss */
 main {
   background-color: #f2f2f2;
 }
 
-/* line 95, ../scss/main.scss */
+/* line 94, ../scss/main.scss */
 .toast-success {
   background-color: #dff0d8;
 }
 
-/* line 96, ../scss/main.scss */
+/* line 95, ../scss/main.scss */
 .toast-error {
   background-color: #f2dede;
 }
 
-/* line 100, ../scss/main.scss */
+/* line 99, ../scss/main.scss */
 .full {
   width: 100%;
 }
 
-/* line 103, ../scss/main.scss */
+/* line 102, ../scss/main.scss */
 .gap {
   height: 30px;
   width: 100%;
@@ -103,7 +106,7 @@ main {
   display: block;
 }
 
-/* line 111, ../scss/main.scss */
+/* line 110, ../scss/main.scss */
 footer {
   background: #000;
   font-family: 'BebasNeue', sans-serif;
@@ -113,17 +116,17 @@ footer {
   margin: 0 auto;
   position: absolute;
 }
-/* line 121, ../scss/main.scss */
+/* line 120, ../scss/main.scss */
 footer ul {
   list-style-type: none;
   padding: auto;
 }
-/* line 125, ../scss/main.scss */
+/* line 124, ../scss/main.scss */
 footer ul #social {
   display: flex;
   align-items: center;
 }
-/* line 131, ../scss/main.scss */
+/* line 130, ../scss/main.scss */
 footer li {
   float: left;
   padding-left: 100px;
@@ -132,7 +135,7 @@ footer li {
   height: auto;
   display: inline-block;
 }
-/* line 138, ../scss/main.scss */
+/* line 137, ../scss/main.scss */
 footer li a {
   color: #fff;
   font-family: 'BebasNeue', sans-serif;
@@ -141,13 +144,13 @@ footer li a {
   text-align: center;
   overflow: hidden;
 }
-/* line 145, ../scss/main.scss */
+/* line 144, ../scss/main.scss */
 footer li a:hover {
   text-decoration: none;
   color: #fff;
 }
 
-/* line 155, ../scss/main.scss */
+/* line 154, ../scss/main.scss */
 .supportLi h4 {
   font-size: 20px;
   font-weight: lighter;
@@ -156,7 +159,7 @@ footer li a:hover {
   padding-bottom: 0;
 }
 
-/* line 162, ../scss/main.scss */
+/* line 161, ../scss/main.scss */
 .newsletter-box input#appendedInputButton {
   background: #FFFFFF;
   display: inline-block;
@@ -166,7 +169,7 @@ footer li a:hover {
   width: 100%;
 }
 
-/* line 170, ../scss/main.scss */
+/* line 169, ../scss/main.scss */
 .newsletter-box .btn {
   border: medium none;
   -webkit-border-radius: 3px;
@@ -181,18 +184,18 @@ footer li a:hover {
   color: #fff;
 }
 
-/* line 183, ../scss/main.scss */
+/* line 182, ../scss/main.scss */
 .newsletter-box {
   overflow: hidden;
 }
 
-/* line 186, ../scss/main.scss */
+/* line 185, ../scss/main.scss */
 .bg-gray {
   background-image: -moz-linear-gradient(center bottom, #BBBBBB 0%, #F0F0F0 100%);
   box-shadow: 0 1px 0 #B4B3B3;
 }
 
-/* line 190, ../scss/main.scss */
+/* line 189, ../scss/main.scss */
 .social li {
   background: none repeat scroll 0 0 #B5B5B5;
   border: 2px solid #B5B5B5;
@@ -215,7 +218,7 @@ footer li a:hover {
   -o-transition: all 0.5s ease 0s;
 }
 
-/* line 211, ../scss/main.scss */
+/* line 210, ../scss/main.scss */
 .social li:hover {
   transform: scale(1.15) rotate(360deg);
   -webkit-transform: scale(1.1) rotate(360deg);
@@ -224,25 +227,25 @@ footer li a:hover {
   -o-transform: scale(1.1) rotate(360deg);
 }
 
-/* line 218, ../scss/main.scss */
+/* line 217, ../scss/main.scss */
 .social li a {
   color: #EDEFF1;
 }
 
-/* line 221, ../scss/main.scss */
+/* line 220, ../scss/main.scss */
 .social li:hover {
   border: 2px solid #2c3e50;
   background: #2c3e50;
 }
 
-/* line 225, ../scss/main.scss */
+/* line 224, ../scss/main.scss */
 .social li a i {
   font-size: 16px;
   margin: 0 0 0 5px;
   color: #EDEFF1 !important;
 }
 
-/* line 230, ../scss/main.scss */
+/* line 229, ../scss/main.scss */
 .footer-bottom {
   background: #E3E3E3;
   border-top: 1px solid #DDDDDD;
@@ -250,17 +253,17 @@ footer li a:hover {
   padding-bottom: 10px;
 }
 
-/* line 236, ../scss/main.scss */
+/* line 235, ../scss/main.scss */
 .footer-bottom p.pull-left {
   padding-top: 6px;
 }
 
-/* line 239, ../scss/main.scss */
+/* line 238, ../scss/main.scss */
 .payments {
   font-size: 1.5em;
 }
 
-/* line 243, ../scss/main.scss */
+/* line 242, ../scss/main.scss */
 .wrapper.login {
   width: 350px;
 }
