--- a/css/main.css
+++ b/css/main.css
@@ -11,94 +11,110 @@
   margin: 0 auto;
 }
 
-/* line 30, ../scss/main.scss */
+/* line 28, ../scss/main.scss */
 #white {
   color: #fff;
   font-family: 'BebasNeue', sans-serif;
 }
 
-/* line 35, ../scss/main.scss */
+/* line 33, ../scss/main.scss */
 #turquoise {
   color: #46b29d;
   font-family: 'BebasNeue', sans-serif;
 }
 
-/* line 40, ../scss/main.scss */
+/* line 38, ../scss/main.scss */
 .navbar {
   margin: 0 auto;
   background-color: #e0dcda;
   font-family: 'BebasNeue', sans-serif;
-  color: #000;
+  border: none;
 }
-/* line 46, ../scss/main.scss */
+/* line 44, ../scss/main.scss */
 .navbar .navbar-nav {
   width: 100%;
   text-align: center;
 }
-/* line 49, ../scss/main.scss */
+/* line 47, ../scss/main.scss */
 .navbar .navbar-nav > li {
   float: none;
   display: inline-block;
 }
-/* line 53, ../scss/main.scss */
+/* line 50, ../scss/main.scss */
+.navbar .navbar-nav > li > a {
+  color: #000;
+}
+/* line 54, ../scss/main.scss */
 .navbar .navbar-nav .navbar-right {
   float: right;
 }
-/* line 58, ../scss/main.scss */
+/* line 59, ../scss/main.scss */
 .navbar .navbar-default {
   width: 100%;
   text-align: center;
 }
-/* line 61, ../scss/main.scss */
+/* line 62, ../scss/main.scss */
 .navbar .navbar-default > li {
   float: none;
   display: inline-block;
 }
+/* line 67, ../scss/main.scss */
+.navbar .navbar-default > .active {
+  background-color: #fff;
+}
 
-/* line 68, ../scss/main.scss */
+/* line 73, ../scss/main.scss */
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  background-color: #fff;
+  color: #46b29d;
+}
+
+/* line 80, ../scss/main.scss */
 header {
   background-color: #000;
   font-family: 'BebasNeue', sans-serif;
 }
-/* line 71, ../scss/main.scss */
+/* line 83, ../scss/main.scss */
 header .inner {
   margin: 0 auto;
   width: 100%;
   display: block;
 }
-/* line 78, ../scss/main.scss */
+/* line 90, ../scss/main.scss */
 header .btn {
   background-color: #000;
   border: none;
   font-size: 11.5pt;
   float: right;
 }
-/* line 83, ../scss/main.scss */
+/* line 95, ../scss/main.scss */
 header .btn:hover {
   background-color: #000;
 }
 
-/* line 89, ../scss/main.scss */
+/* line 101, ../scss/main.scss */
 main {
   background-color: #f2f2f2;
 }
 
-/* line 94, ../scss/main.scss */
+/* line 106, ../scss/main.scss */
 .toast-success {
   background-color: #dff0d8;
 }
 
-/* line 95, ../scss/main.scss */
+/* line 107, ../scss/main.scss */
 .toast-error {
   background-color: #f2dede;
 }
 
-/* line 99, ../scss/main.scss */
+/* line 111, ../scss/main.scss */
 .full {
   width: 100%;
 }
 
-/* line 102, ../scss/main.scss */
+/* line 114, ../scss/main.scss */
 .gap {
   height: 30px;
   width: 100%;
@@ -106,7 +122,7 @@ main {
   display: block;
 }
 
-/* line 110, ../scss/main.scss */
+/* line 122, ../scss/main.scss */
 footer {
   background: #000;
   font-family: 'BebasNeue', sans-serif;
@@ -116,17 +132,17 @@ footer {
   margin: 0 auto;
   position: absolute;
 }
-/* line 120, ../scss/main.scss */
+/* line 132, ../scss/main.scss */
 footer ul {
   list-style-type: none;
   padding: auto;
 }
-/* line 124, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 footer ul #social {
   display: flex;
   align-items: center;
 }
-/* line 130, ../scss/main.scss */
+/* line 142, ../scss/main.scss */
 footer li {
   float: left;
   padding-left: 100px;
@@ -135,7 +151,7 @@ footer li {
   height: auto;
   display: inline-block;
 }
-/* line 137, ../scss/main.scss */
+/* line 149, ../scss/main.scss */
 footer li a {
   color: #fff;
   font-family: 'BebasNeue', sans-serif;
@@ -144,13 +160,13 @@ footer li a {
   text-align: center;
   overflow: hidden;
 }
-/* line 144, ../scss/main.scss */
+/* line 156, ../scss/main.scss */
 footer li a:hover {
   text-decoration: none;
   color: #fff;
 }
 
-/* line 154, ../scss/main.scss */
+/* line 166, ../scss/main.scss */
 .supportLi h4 {
   font-size: 20px;
   font-weight: lighter;
@@ -159,7 +175,7 @@ footer li a:hover {
   padding-bottom: 0;
 }
 
-/* line 161, ../scss/main.scss */
+/* line 173, ../scss/main.scss */
 .newsletter-box input#appendedInputButton {
   background: #FFFFFF;
   display: inline-block;
@@ -169,7 +185,7 @@ footer li a:hover {
   width: 100%;
 }
 
-/* line 169, ../scss/main.scss */
+/* line 181, ../scss/main.scss */
 .newsletter-box .btn {
   border: medium none;
   -webkit-border-radius: 3px;
@@ -184,18 +200,18 @@ footer li a:hover {
   color: #fff;
 }
 
-/* line 182, ../scss/main.scss */
+/* line 194, ../scss/main.scss */
 .newsletter-box {
   overflow: hidden;
 }
 
-/* line 185, ../scss/main.scss */
+/* line 197, ../scss/main.scss */
 .bg-gray {
   background-image: -moz-linear-gradient(center bottom, #BBBBBB 0%, #F0F0F0 100%);
   box-shadow: 0 1px 0 #B4B3B3;
 }
 
-/* line 189, ../scss/main.scss */
+/* line 201, ../scss/main.scss */
 .social li {
   background: none repeat scroll 0 0 #B5B5B5;
   border: 2px solid #B5B5B5;
@@ -218,7 +234,7 @@ footer li a:hover {
   -o-transition: all 0.5s ease 0s;
 }
 
-/* line 210, ../scss/main.scss */
+/* line 222, ../scss/main.scss */
 .social li:hover {
   transform: scale(1.15) rotate(360deg);
   -webkit-transform: scale(1.1) rotate(360deg);
@@ -227,25 +243,25 @@ footer li a:hover {
   -o-transform: scale(1.1) rotate(360deg);
 }
 
-/* line 217, ../scss/main.scss */
+/* line 229, ../scss/main.scss */
 .social li a {
   color: #EDEFF1;
 }
 
-/* line 220, ../scss/main.scss */
+/* line 232, ../scss/main.scss */
 .social li:hover {
   border: 2px solid #2c3e50;
   background: #2c3e50;
 }
 
-/* line 224, ../scss/main.scss */
+/* line 236, ../scss/main.scss */
 .social li a i {
   font-size: 16px;
   margin: 0 0 0 5px;
   color: #EDEFF1 !important;
 }
 
-/* line 229, ../scss/main.scss */
+/* line 241, ../scss/main.scss */
 .footer-bottom {
   background: #E3E3E3;
   border-top: 1px solid #DDDDDD;
@@ -253,17 +269,17 @@ footer li a:hover {
   padding-bottom: 10px;
 }
 
-/* line 235, ../scss/main.scss */
+/* line 247, ../scss/main.scss */
 .footer-bottom p.pull-left {
   padding-top: 6px;
 }
 
-/* line 238, ../scss/main.scss */
+/* line 250, ../scss/main.scss */
 .payments {
   font-size: 1.5em;
 }
 
-/* line 242, ../scss/main.scss */
+/* line 254, ../scss/main.scss */
 .wrapper.login {
   width: 350px;
 }
