--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,7 +39,7 @@ $main-color         : #f2f2f2;
     margin: 0 auto;
     background-color: $nav-color;
     font-family: 'BebasNeue', sans-serif;
-    color: $black;
+    border: none;
 
     .navbar-nav {
         width: 100%;
@@ -47,6 +47,9 @@ $main-color         : #f2f2f2;
         > li {
             float: none;
             display: inline-block;
+            > a {
+                color: $black;
+            }
         }
         .navbar-right {
             float: right;
@@ -60,15 +63,18 @@ $main-color         : #f2f2f2;
             float: none;
             display: inline-block;
         }
+
+        > .active {
+            background-color: $white;
+        }
     }
 }
 
-.container-fluid{
-        background-color: $main-color;
-}
-
-.active {
-    background-color: $main-color;
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    background-color: $white;
+    color: $turquoise;
 }
 
 header {
