--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,211 +1,433 @@
 @mixin breakpoint($breakpoint) {
-    @media (min-width: $breakpoint) { @content; }
+  @media (min-width: $breakpoint) {
+    @content;
+  }
 }
 
-$desktop            : 990px;
-$blue               : #337ab7;
+@font-face {
+  font-family: 'BebasNeue';
+  src: url('fonts/BEBAS.eot');
+  src: local('☺'), url('fonts/BEBAS.woff') format('woff'), url('fonts/BEBAS.ttf') format('truetype'), url('fonts/BEBAS.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
-$lineColor          : $blue;
-
+$desktop: 990px;
+$black: #000;
+$turquoise: #46b29d;
+$white: #fff;
+$orange: #e37b40;
+$nav-color: #e0dcda;
+$main-color: #f2f2f2;
 
 #main {
+  margin: 0 auto;
+}
 
-    margin:0 auto;
-    width: 90%;
+#white {
+  color: $white;
+  font-family: 'BebasNeue', sans-serif;
+  border-right: 1px solid $white;
+}
 
-    @include breakpoint($desktop) {
-        width: $desktop;
+#main-color {
+  background-color: $main-color;
+}
+
+#turquoise {
+  color: $turquoise;
+  font-family: 'BebasNeue', sans-serif;
+}
+
+#infotext {
+  font-family: Helvetica, sans-serif;
+  font-size: 14pt;
+}
+
+input[type=text]{
+  width:100%;
+  border:1px solid $nav-color;
+  border-radius:4px;
+  margin: 4px 0;
+  padding: 5px;
+  box-sizing:border-box;
+  transition:.3s;
+  &:focus{
+    border-color: $turquoise;
+    box-shadow: 0 0 4px 0 $turquoise;
+  }
+}
+.inputWithIcon{
+  position:relative;
+  input[type=text]{
+    padding-left:40px;
+    &:focus + i{
+      color:$turquoise;
     }
+  }
+  i{
+    position:absolute;
+    left:0;
+    padding:13px 12px;
+    color: $nav-color;
+    transition:.3s;
+  }
+}
+
+input[type=date]{
+  width:100%;
+  border:1px solid $nav-color;
+  border-radius:4px;
+  margin: 4px 0;
+  padding: 5px;
+  box-sizing:border-box;
+  transition:.3s;
+  &:focus{
+    border-color: $turquoise;
+    box-shadow: 0 0 4px 0 $turquoise;
+  }
+}
+.inputWithIcon{
+  position:relative;
+  input[type=date]{
+    padding-left:40px;
+    &:focus + i{
+      color:$turquoise;
+    }
+  }
+  i{
+    position:absolute;
+    left:0;
+    padding:13px 12px;
+    color: $nav-color;
+    transition:.3s;
+  }
+}
+
+input[type=password]{
+  width:100%;
+  border:1px solid $nav-color;
+  border-radius:4px;
+  margin: 4px 0;
+  padding: 5px;
+  box-sizing:border-box;
+  transition:.3s;
+  &:focus{
+    border-color: $turquoise;
+    box-shadow: 0 0 4px 0 $turquoise;
+  }
+}
+.inputWithIcon{
+  position:relative;
+  input[type=password]{
+    padding-left:40px;
+    &:focus + i{
+      color:$turquoise;
+    }
+  }
+  i{
+    position:absolute;
+    left:0;
+    padding:13px 12px;
+    margin: -40px 0 0 0;
+    color: $nav-color;
+    transition:.3s;
+  }
+}
+
+input[type=email]{
+  width:100%;
+  border:1px solid $nav-color;
+  border-radius:4px;
+  margin: 4px 0;
+  padding: 5px;
+  box-sizing:border-box;
+  transition:.3s;
+  &:focus{
+    border-color: $turquoise;
+    box-shadow: 0 0 4px 0 $turquoise;
+  }
+}
+.inputWithIcon{
+  position:relative;
+  input[type=email]{
+    padding-left:40px;
+    &:focus + i{
+      color:$turquoise;
+    }
+  }
+  i{
+    position:absolute;
+    left:0;
+    padding:13px 12px;
+    margin: -40px 0 0 0;
+    color: $nav-color;
+    transition:.3s;
+  }
+}
+
+h1 {
+  font-family: 'BebasNeue', sans-serif;
+  font-size: 25pt;
+  color: $black;
+  margin: 20px 0 20px -13px;
+  padding: 0;
+}
+
+h2 {
+  font-family: Helvetica, sans-serif;
+  font-size: 12pt;
+  font-weight: bold;
+  margin: 0 0 0 -13px;
+  padding: 0;
+}
+
+#login-text {
+  font-family: Helvetica, sans-serif;
+  font-size: 12pt;
+  margin: 0 0 0 -13px;
+}
+
+hr {
+  margin: 0 0 12px 0;
+}
+
+.navbar {
+  margin: 0 auto;
+  background-color: $nav-color;
+  font-family: 'BebasNeue', sans-serif;
+  border: none;
+
+  .navbar-nav {
+    width: 100%;
+    text-align: center;
+    > li {
+      float: none;
+      display: inline-block;
+      border-right: 1px solid #adadad;
+
+      &:last-child {
+        border-right: none;
+      }
+      > a {
+        color: $black;
+      }
+    }
+    .navbar-right {
+      float: right;
+    }
+  }
+
+  .navbar-default {
+    width: 100%;
+    text-align: center;
+    > li {
+      float: none;
+      display: inline-block;
+    }
+
+    > .active {
+      background-color: $main-color;
+    }
+  }
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  background-color: $main-color;
+  color: $orange;
 }
 
 header {
-    .inner {
-        margin:0 auto;
-        width: 90%;
+  background-color: $black;
+  font-family: 'BebasNeue', sans-serif;
 
-        .logo {
-            margin-top:10px;
-            margin-bottom:30px;
+  .inner {
+    margin: 0 auto;
+    width: 100%;
+    display: block;
 
-            .name {
-                font-size:25px;
-                font-weight: 400;
-            }
+  }
 
-            .version {
-                &::before {
-                    content: "Version";
-                    display: inline-block;
-                    margin-right:5px;
-                }
-
-                color:#aaa;
-                font-size:10px;
-            }
-        }
-
-        @include breakpoint($desktop) {
-            width: $desktop;
-        }
+  .btn {
+    background-color: $black;
+    border: none;
+    font-size: 11.5pt;
+    float: right;
+    &:hover {
+      background-color: $black;
     }
-
-
-
-    &::after {
-        content: '';
-        display: block;
-        height: 10px;
-        width: 100%;
-        background-color:$lineColor;
-        margin-top:5px;
-    }
-
-    margin-bottom:20px;
+  }
 }
 
+.toast-success {
+  background-color: #dff0d8
+}
 
-.toast-success{background-color:#dff0d8}
-.toast-error{background-color:#f2dede}
-
-
-/* TODO use SCSS... */
+.toast-error {
+  background-color: #f2dede
+}
 
 .full {
-    width: 100%;
+  width: 100%;
 }
+
 .gap {
-    height: 30px;
-    width: 100%;
-    clear: both;
-    display: block;
+  height: 30px;
+  width: 100%;
+  clear: both;
+  display: block;
 }
-.footer {
-    background: #EDEFF1;
-    height: auto;
-    padding-bottom: 30px;
-    position: relative;
-    width: 100%;
-    border-bottom: 1px solid #CCCCCC;
-    border-top: 1px solid #DDDDDD;
-}
-.footer p {
-    margin: 0;
-}
-.footer img {
-    max-width: 100%;
-}
-.footer h3 {
-    border-bottom: 1px solid #BAC1C8;
-    color: #54697E;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 27px;
-    padding: 40px 0 10px;
-    text-transform: uppercase;
-}
-.footer ul {
-    font-size: 13px;
-    list-style-type: none;
-    margin-left: 0;
-    padding-left: 0;
-    margin-top: 15px;
-    color: #7F8C8D;
-}
-.footer ul li a {
-    padding: 0 0 5px 0;
-    display: block;
-}
-.footer a {
-    color: #78828D
-}
-.supportLi h4 {
-    font-size: 20px;
-    font-weight: lighter;
-    line-height: normal;
-    margin-bottom: 0 !important;
-    padding-bottom: 0;
-}
-.newsletter-box input#appendedInputButton {
-    background: #FFFFFF;
-    display: inline-block;
-    float: left;
-    height: 30px;
-    clear: both;
-    width: 100%;
-}
-.newsletter-box .btn {
-    border: medium none;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -o-border-radius: 3px;
-    -ms-border-radius: 3px;
-    border-radius: 3px;
-    display: inline-block;
-    height: 40px;
-    padding: 0;
-    width: 100%;
-    color: #fff;
-}
-.newsletter-box {
-    overflow: hidden;
-}
-.bg-gray {
-    background-image: -moz-linear-gradient(center bottom, #BBBBBB 0%, #F0F0F0 100%);
-    box-shadow: 0 1px 0 #B4B3B3;
-}
-.social li {
-    background: none repeat scroll 0 0 #B5B5B5;
-    border: 2px solid #B5B5B5;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -o-border-radius: 50%;
-    -ms-border-radius: 50%;
-    border-radius: 50%;
-    float: left;
-    height: 36px;
-    line-height: 36px;
-    margin: 0 8px 0 0;
-    padding: 0;
+
+footer {
+  background: $black;
+  font-family: 'BebasNeue', sans-serif;
+  padding: 40px;
+  min-height: auto;
+  width: 100%;
+  margin: 25px auto;
+  position: absolute;
+  text-align: center;
+
+  div.navbar-nav {
+    margin-top: 40px;
+    float: none;
     text-align: center;
-    width: 36px;
-    transition: all 0.5s ease 0s;
-    -moz-transition: all 0.5s ease 0s;
-    -webkit-transition: all 0.5s ease 0s;
-    -ms-transition: all 0.5s ease 0s;
-    -o-transition: all 0.5s ease 0s;
+  }
+
+  ul {
+    list-style-type: none;
+    padding: auto;
+
+    #social {
+      display: flex;
+      align-items: center;
+    }
+  }
+
+  li {
+    float: left;
+    padding-left: 100px;
+    color: $white;
+    font-family: 'BebasNeue', sans-serif;
+    height: auto;
+    display: inline-block;
+    a {
+      color: $white;
+      font-family: 'BebasNeue', sans-serif;
+      font-size: 12pt;
+      display: block;
+      text-align: center;
+      overflow: hidden;
+      &:hover {
+        text-decoration: none;
+        color: $white;
+      }
+    }
+  }
 }
+
+.supportLi h4 {
+  font-size: 20px;
+  font-weight: lighter;
+  line-height: normal;
+  margin-bottom: 0 !important;
+  padding-bottom: 0;
+}
+
+.newsletter-box input#appendedInputButton {
+  background: #FFFFFF;
+  display: inline-block;
+  float: left;
+  height: 30px;
+  clear: both;
+  width: 100%;
+}
+
+.newsletter-box .btn {
+  border: medium none;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+  display: inline-block;
+  height: 40px;
+  padding: 0;
+  width: 100%;
+  color: #fff;
+}
+
+.newsletter-box {
+  overflow: hidden;
+}
+
+.bg-gray {
+  background-image: -moz-linear-gradient(center bottom, #BBBBBB 0%, #F0F0F0 100%);
+  box-shadow: 0 1px 0 #B4B3B3;
+}
+
+.social li {
+  background: none repeat scroll 0 0 #B5B5B5;
+  border: 2px solid #B5B5B5;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -o-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+  float: left;
+  height: 36px;
+  line-height: 36px;
+  margin: 0 8px 0 0;
+  padding: 0;
+  text-align: center;
+  width: 36px;
+  transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -webkit-transition: all 0.5s ease 0s;
+  -ms-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+}
+
 .social li:hover {
-    transform: scale(1.15) rotate(360deg);
-    -webkit-transform: scale(1.1) rotate(360deg);
-    -moz-transform: scale(1.1) rotate(360deg);
-    -ms-transform: scale(1.1) rotate(360deg);
-    -o-transform: scale(1.1) rotate(360deg);
+  transform: scale(1.15) rotate(360deg);
+  -webkit-transform: scale(1.1) rotate(360deg);
+  -moz-transform: scale(1.1) rotate(360deg);
+  -ms-transform: scale(1.1) rotate(360deg);
+  -o-transform: scale(1.1) rotate(360deg);
 }
+
 .social li a {
-    color: #EDEFF1;
+  color: #EDEFF1;
 }
+
 .social li:hover {
-    border: 2px solid #2c3e50;
-    background: #2c3e50;
+  border: 2px solid #2c3e50;
+  background: #2c3e50;
 }
+
 .social li a i {
-    font-size: 16px;
-    margin: 0 0 0 5px;
-    color: #EDEFF1 !important;
+  font-size: 16px;
+  margin: 0 0 0 5px;
+  color: #EDEFF1 !important;
 }
+
 .footer-bottom {
-    background: #E3E3E3;
-    border-top: 1px solid #DDDDDD;
-    padding-top: 10px;
-    padding-bottom: 10px;
+  background: #E3E3E3;
+  border-top: 1px solid #DDDDDD;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
+
 .footer-bottom p.pull-left {
-    padding-top: 6px;
+  padding-top: 6px;
 }
+
 .payments {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 .wrapper.login {
-  width:350px;
+  width: 350px;
 }
